Bug 249155 - [GStreamer][MSE] Fix a caps leak in AppendPipeline
Summary: [GStreamer][MSE] Fix a caps leak in AppendPipeline
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Platform (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Philippe Normand
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-12-12 09:54 PST by Philippe Normand
Modified: 2022-12-14 01:07 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Philippe Normand 2022-12-12 09:54:39 PST
.
Comment 1 Philippe Normand 2022-12-12 09:56:31 PST
Pull request: https://github.com/WebKit/WebKit/pull/7495
Comment 2 EWS 2022-12-14 01:06:33 PST
Committed 257838@main (dc208a0a320c): <https://commits.webkit.org/257838@main>

Reviewed commits have been landed. Closing PR #7495 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2022-12-14 01:07:17 PST
<rdar://problem/103342360>