Cherry-pick 257838@main (dc208a0a320c). https://bugs.webkit.org/show_bug.cgi?id=249155

[GStreamer][MSE] Fix a caps leak in AppendPipeline
    https://bugs.webkit.org/show_bug.cgi?id=249155

    Reviewed by Alicia Boya Garcia.

    The return value of `gst_pad_get_current_caps()` is `transfer full` so we need to adopt it.

    * Source/WebCore/platform/graphics/gstreamer/mse/AppendPipeline.cpp:
    (WebCore::AppendPipeline::AppendPipeline):

    Canonical link: https://commits.webkit.org/257838@main